# rebate

./: .gitignore  CLAUDE.md  MANUAL.md  Q&A.txt  README.md  pyproject.toml  run_backend.bat  run_frontend.bat
backend/: .env.example  main.py  requirements.txt
config/: form_types.json  form_types.schema.json  matching_config.json  tax_rules.json
docs/: architecture.md  auto-formula-plan.md  aws-migration-plan.md  cold-start.md  current-system.md  framework.md  index.html  literate-config-migration.md  nl-to-dsl-pipeline.md  output-format.md  phase1-prompt.md  phase2-extraction-reliability.md  phase2-prompt.md  phase3-dist-mapping-prompt.md  phase3-mapping.md  phase3-prompt.md  phase3-redesign.md  phase3-tool-use-product-prompt.md  phase4-design.md  phase4-dsl-readiness.md  pipeline-overview.md  registry-driven-primitives.md  rollout-phase3-tool-use.md  tool_contracts.md  ui-design.md
form_definitions/: _index.md  form_01.md  form_02.md  form_03.md  form_04.md  form_04.md.bak  form_05.md  form_template.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
gws/: INSTALL_macOS.md  SKILL.md  google_workspace_cli-0.1.0-py3-none-any.whl
mappings/: domae_retail_1.csv  form_columns.json  ocr_dist.csv  ocr_product.csv  ocr_retailer.csv  retail_user.csv  unit_price.csv  users_import.csv
scripts/: aggregate_strategies.py  build_form_types.py  cleanup_phase1.py  compile_dsl_poc.py  deploy_backend.sh  deploy_frontend.sh  drive_auth.py  drive_test.py  dsl_apply.py  export_excel.py  gen_regression_fixture.py  import_users.py  phase4_calc.py  (+7 more)
(+142 files in other folders)
